--- a/src/style/Dashboard/Dashboard.css
+++ b/src/style/Dashboard/Dashboard.css
@@ -66,6 +66,7 @@
   cursor: pointer;
 }
 
+.dashboard-active,
 .dashboard li:hover {
   box-shadow: 0px 0px 14px 0px #0000001f;
   border-radius: 10px;
