--- a/src/style/Dashboard/Dashboard.css
+++ b/src/style/Dashboard/Dashboard.css
@@ -71,3 +71,99 @@
   box-shadow: 0px 0px 14px 0px #0000001f;
   border-radius: 10px;
 }
+
+.dashboard-header-data {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+
+  margin-top: 50px;
+}
+
+.data-1 {
+  color: #ff5d01;
+}
+
+.data-2 {
+  color: #60b84b;
+}
+
+.data-3 {
+  color: #5076ff;
+}
+
+.num-of-quiz {
+  font-size: 60px;
+  font-weight: 600;
+}
+
+.text {
+  font-size: 30px;
+  font-weight: 600;
+}
+
+.quizData {
+  padding: 10px;
+  border-radius: 5px;
+
+  display: flex;
+  flex: 1;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 100%;
+  gap: 20px;
+}
+
+.quiz-data {
+  background-color: #ffffff;
+  padding: 15px;
+  border-radius: 5px;
+  width: 250px;
+  font-weight: 600;
+}
+
+.quiz-title {
+  font-size: 24px;
+  color: #474444;
+}
+
+.quiz-impression {
+  font-size: 20px;
+  float: right;
+  color: #ff5d01;
+}
+
+.date-created {
+  font-size: 14px;
+  color: #60b84b;
+}
+
+.data {
+  background-color: #ffffff;
+  border-radius: 10px;
+  width: 250px;
+  text-align: center;
+  margin: 20px;
+  padding: 15px;
+}
+
+.dashboard-header h2 {
+  font-size: 35px;
+  color: #474444;
+  margin-left: 75px;
+}
+
+.quiz-statistics {
+  width: 100%;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.quiz-data img {
+  margin-left: 5px;
+}
