--- a/src/style/Dashboard/Dashboard.css
+++ b/src/style/Dashboard/Dashboard.css
@@ -111,7 +111,7 @@
   flex: 1;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: start;
   width: 100%;
   gap: 20px;
 }
@@ -173,7 +173,7 @@
 .createQuiz {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  padding: 20px;
   justify-content: center;
 
   height: 400px;
@@ -188,7 +188,12 @@
 }
 
 .create-quiz {
-  width: 700px;
+  width: 100%;
+  height: 60%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
 }
 
 #quizName {
@@ -196,7 +201,6 @@
   height: 30px;
   padding: 10px;
   padding-left: 20px;
-  margin-left: 5%;
   outline: none;
   border: none;
   border-radius: 10px;
@@ -214,7 +218,6 @@
   padding: 10px;
   font-size: 20px;
   font-weight: 600;
-  margin: 25px;
   width: 95%;
 }
 
@@ -239,7 +242,6 @@
   justify-content: space-between;
   text-align: center;
   width: 95%;
-  margin-left: 5%;
 }
 
 .cancel-btn {
