--- a/src/style/QuizInterface/QuizInterface.css
+++ b/src/style/QuizInterface/QuizInterface.css
@@ -6,7 +6,7 @@
 
 .QuizInterface-content {
   width: 80vw;
-  max-height: 80vh;
+  min-height: 80vh;
   background-color: #ffffff;
   border-radius: 15px;
   padding: 20px;
@@ -53,6 +53,7 @@
   flex-direction: row;
   justify-content: space-around;
   flex-wrap: wrap;
+  gap: 20px;
 }
 
 .QuizInterface-option {
@@ -85,7 +86,7 @@
 }
 
 .QuizInterface-completion-message {
-  height: 90vh;
+  height: 95vh;
   width: 85vw;
   background-color: white;
   color: #474444;
@@ -113,4 +114,11 @@
   color: #474444;
   width: 50%;
   text-align: center;
+}
+
+.QuizInterface-option img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  border-radius: 8px;
 }
