--- a/src/style/Dashboard/CreateQuiz.css
+++ b/src/style/Dashboard/CreateQuiz.css
@@ -219,6 +219,28 @@
   margin-left: 10px;
 }
 
+.option-container-text-image-option {
+  display: flex;
+  align-items: center;
+}
+
+.text-image-option-label {
+  width: 80%;
+  display: flex;
+  align-items: center;
+}
+
+.text-image-option-label input[type="text"] {
+  width: 50%;
+  outline: none;
+  border: none;
+  font-size: 20px;
+  padding: 10px;
+  border-radius: 10px;
+  margin: 5px 0;
+  box-shadow: 0px 0px 25px 0px #00000026;
+}
+
 .option-input {
   width: 100%;
   background-color: transparent;
@@ -228,4 +250,10 @@
 .option-input.selected {
   background-color: #60b84b;
   color: white;
+}
+
+.textImageOptions {
+  width: 40%;
+  margin-left: 5%;
+  margin-top: 5px;
 }
