--- a/src/style/Dashboard/Dashboard.css
+++ b/src/style/Dashboard/Dashboard.css
@@ -274,3 +274,10 @@
   background-color: #60b84b;
   color: #ffffff;
 }
+
+.quizData-message {
+  margin-top: 20px;
+  font-size: 20px;
+  font-weight: 600;
+  text-align: center;
+}
